# gnark-bn254-verifier

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  converter.rs  element.rs  hash_to_field.rs  kzg.rs  lib.rs  prove.rs  transcript.rs  verify.rs
src/groth16/: converter.rs  mod.rs  proof.rs  verify.rs
src/plonk/: converter.rs  element.rs  kzg.rs  verify.rs
