[package]
name = "gnark-bn254-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
sha2 = "0.10.8"
