[package]
name = "gnark-bn254-verifier"
authors = [ "Aditya Bisht" ]
description = "A rust gnark verifier for BN254 curve"
repository = "https://github.com/Bisht13/gnark-bn254-verifier"
keywords = [ "zero-knowledge", "cryptography", "zkSNARK", "SNARK", "gnark" ]
categories = [ "cryptography" ]
readme = "README.md"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
version = "1.0.2"

[dependencies]
anyhow = "1.0.86"
substrate-bn = "0.6.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
sha2 = "0.10.8"
